--- a/pick-three-things/index.html
+++ b/pick-three-things/index.html
@@ -14,14 +14,14 @@
   <meta property="og:url" content="https://finetunepartners.com/">
   <link rel="canonical" href="https://finetunepartners.com/">
   <meta property="og:site_name" content="Recipe tools">
-  <meta property="og:image" content="/img/og/og.jpg">
-  <meta itemprop="image" content="/img/og/og.jpg">
-  <link rel="image_src" href="/img/og/og.jpg">
-  <link rel="apple-touch-icon" sizes="180x180" href="/img/favicon/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon/favicon-16x16.png">
-  <link rel="manifest" href="/site.webmanifest">
-  <link rel="mask-icon" href="/img/favicon/safari-pinned-tab.svg" color="#2e38ef">
+  <meta property="og:image" content="/recipe-tools-dev/img/og/og.jpg">
+  <meta itemprop="image" content="/recipe-tools-dev/img/og/og.jpg">
+  <link rel="image_src" href="/recipe-tools-dev/img/og/og.jpg">
+  <link rel="apple-touch-icon" sizes="180x180" href="/recipe-tools-dev/img/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/recipe-tools-dev/img/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/recipe-tools-dev/img/favicon/favicon-16x16.png">
+  <link rel="manifest" href="/recipe-tools-dev/site.webmanifest">
+  <link rel="mask-icon" href="/recipe-tools-dev/img/favicon/safari-pinned-tab.svg" color="#2e38ef">
   <meta name="msapplication-TileColor" content="#ffc40d">
   <meta name="theme-color" content="#d7f2db">
 <link href="../css/app.css" rel="stylesheet"></head>
