--- a/recipe-of-the-day/index.html
+++ b/recipe-of-the-day/index.html
@@ -29,10 +29,11 @@
 <body>
   <main>
     <div class="container">
-      <h1>Recipe tools</h1>
       <div data-js="app"></div>
+      <div data-js="ptt-results" class="modal bt-yellow brd-yellow" hidden></div>
     </div>
   </main>
 <script type="text/javascript" src="../js/app.js"></script></body>
 
 </html>
+
