--- a/themes/index.html
+++ b/themes/index.html
@@ -3,13 +3,13 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Recipe tools</title>
+  <title>Recipe themes - Recipe tools</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="HandheldFriendly" content="true">
-  <meta name="description" content="Recipe tools">
-  <meta property="og:title" content="Recipe tools">
-  <meta property="og:description" content="Recipe tools">
+  <meta name="description" content="Recipe themes - Recipe tools">
+  <meta property="og:title" content="Recipe themes - Recipe tools">
+  <meta property="og:description" content="Recipe themes - Recipe tools">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://finetunepartners.com/">
   <link rel="canonical" href="https://finetunepartners.com/">
@@ -24,26 +24,12 @@
   <link rel="mask-icon" href="/recipe-tools-dev/img/favicon/safari-pinned-tab.svg" color="#2e38ef">
   <meta name="msapplication-TileColor" content="#ffc40d">
   <meta name="theme-color" content="#d7f2db">
-<link rel="shortcut icon" href="favicon.ico"><link href="css/app.css" rel="stylesheet"></head>
+<link href="../css/app.css" rel="stylesheet"></head>
 
 <body>
   <main>
-    <div class="container">
-      <h1>Recipe tools</h1>
-      <p>
-        <a href="/recipe-tools-dev/recipe-of-the-day/" class="btn btn-primary">Recipe of the day</a>
-      </p>
-      <p>
-        <a href="/recipe-tools-dev/pick-three-things/" class="btn btn-primary">Pick three things</a>
-      </p>
-      <p>
-        <a href="/recipe-tools-dev/recipes-featuring/" class="btn btn-primary">Recipes featuring</a>
-      </p>
-      <p>
-        <a href="/recipe-tools-dev/themes/" class="btn btn-primary">Recipe themes</a>
-      </p>
-    </div>
+    <div data-js="recipes-themes"></div>
   </main>
-<script type="text/javascript" src="js/app.js"></script></body>
+<script type="text/javascript" src="../js/app.js"></script></body>
 
 </html>
