--- a/index.html
+++ b/index.html
@@ -27,21 +27,28 @@
 <link rel="shortcut icon" href="favicon.ico"><link href="css/app.css" rel="stylesheet"></head>
 
 <body>
+  <header class="bt-yellow pad-vert-tiny brd-bottom brd-yellow">
+    <div class="container">
+      <div class="row">
+        <p class="col-2 col-md-1 logo flush">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" aria-label="Recipe tools">
+            <path d="M1 5c1-1 3-2 4 0 1-1 3-1 4-1 0-2 3-4 5-2l9 9c1 2-1 4-3 4 1 3-1 6-4 6-1 2-4 3-6 1l-9-9c-1-1 0-5 3-5 0-1 0-2 1-3" fill="#6C9C15"/>
+            <path d="M9 4l11 11M4 8c0 1 0 2 1 3-1-1-1-2-1-3zm3 5l4 4zm9 8c-1-1-2-1-3-2"/>
+          </svg>
+        </p>
+        <nav class="col-10 col-md-11 text-center">
+          <a href="/recipe-tools-dev/pick-three-things/" class="btn btn-primary">Pick three things</a>
+          <a href="/recipe-tools-dev/recipes-featuring/" class="btn btn-primary">Recipes featuring</a>
+          <a href="/recipe-tools-dev/themes/" class="btn btn-primary">Recipe themes</a>
+        </nav>
+      </div>
+    </div>
+  </header>
+
   <main>
     <div class="container">
-      <h1>Recipe tools</h1>
-      <p>
-        <a href="/recipe-tools-dev/recipe-of-the-day/" class="btn btn-primary">Recipe of the day</a>
-      </p>
-      <p>
-        <a href="/recipe-tools-dev/pick-three-things/" class="btn btn-primary">Pick three things</a>
-      </p>
-      <p>
-        <a href="/recipe-tools-dev/recipes-featuring/" class="btn btn-primary">Recipes featuring</a>
-      </p>
-      <p>
-        <a href="/recipe-tools-dev/themes/" class="btn btn-primary">Recipe themes</a>
-      </p>
+      <div data-js="app"></div>
+      <div data-js="ptt-results" class="modal bt-yellow brd-all brd-yellow" hidden></div>
     </div>
   </main>
 <script type="text/javascript" src="js/app.js"></script></body>
