--- a/account/index.html
+++ b/account/index.html
@@ -30,20 +30,22 @@
   <header class="bt-yellow pad-vert-tiny brd-bottom brd-yellow">
     <div class="container">
       <div class="row">
-        <p class="col-2 col-md-1 icon-medium flush">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" aria-label="Recipe tools">
-            <path d="M1 5c1-1 3-2 4 0 1-1 3-1 4-1 0-2 3-4 5-2l9 9c1 2-1 4-3 4 1 3-1 6-4 6-1 2-4 3-6 1l-9-9c-1-1 0-5 3-5 0-1 0-2 1-3" fill="#6C9C15"/>
-            <path d="M9 4l11 11M4 8c0 1 0 2 1 3-1-1-1-2-1-3zm3 5l4 4zm9 8c-1-1-2-1-3-2"/>
-          </svg>
+        <p class="col-2 col-md-1 flush">
+          <a href="/recipe-tools-dev/" title="Return to the home page">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" aria-label="Recipe tools">
+              <path d="M1 5c1-1 3-2 4 0 1-1 3-1 4-1 0-2 3-4 5-2l9 9c1 2-1 4-3 4 1 3-1 6-4 6-1 2-4 3-6 1l-9-9c-1-1 0-5 3-5 0-1 0-2 1-3" fill="#6C9C15"/>
+              <path d="M9 4l11 11M4 8c0 1 0 2 1 3-1-1-1-2-1-3zm3 5l4 4zm9 8c-1-1-2-1-3-2"/>
+            </svg>
+          </a>
         </p>
-        <nav class="col-8 col-md-10 text-center" aria-label="Main">
+        <nav class="col-8 col-md-10 text-center pad-vert-base" aria-label="Main">
           <a href="/recipe-tools-dev/pick-three-things/" class="btn btn-primary">Pick three things</a>
           <a href="/recipe-tools-dev/recipes-featuring/" class="btn btn-primary">Recipes featuring</a>
           <a href="/recipe-tools-dev/themes/" class="btn btn-primary">Recipe themes</a>
         </nav>
         <p class="col-2 col-md-1 icon-medium flush text-center small">
           <span class="nav-text">
-            <img src="/recipe-tools-dev/img/users/thumb-mum.jpg" alt="User" class="round">
+            <img src="/recipe-tools-dev/img/users/thumb-sarah-bishop.jpg" alt="User" class="round">
             Account
           </span>
         </p>
@@ -57,10 +59,7 @@
         <nav class="col-md-4" aria-label="Account">
           <p><em class="btn btn-primary btn-selected">My favourite recipes</em></p>
           <p><a href="/recipe-tools-dev/account/add-recipe/" class="btn btn-primary">Add a new recipe</a></p>
-              <!-- * Import a recipe from URL (if there's any microdata, import, if not, copy raw output or take screenshot) Imported recipes can't be shared with the community
-              * Manually add a recipe (share with community or not)
-              * Import a photo (store the photo initially, OCR coming later)-->
-          <p><a href="#" class="btn btn-primary">Update account info</a></p>
+          <p><a href="/recipe-tools-dev/account/user-information/" class="btn btn-primary">Update account info</a></p>
         </nav>
         <section class="col-md-8" aria-label="My favourite recipes">
           <h2>My favourite recipes</h2>
@@ -99,7 +98,7 @@
                 Edit recipe
               </a>
 
-              <a href="#" class="btn btn-secondary icon-small">
+              <a href="/recipe-tools-dev/report-recipe/?name=Gambas%20al%20Ajillo" class="btn btn-secondary icon-small">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" aria-label="Warning"><path d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z"></path><line x1="12" y1="9" x2="12" y2="13"></line><line x1="12" y1="17" x2="12.01" y2="17"></line></svg>
                 Report recipe
               </a>
@@ -140,7 +139,7 @@
                 Edit recipe
               </a>
 
-              <a href="#" class="btn btn-secondary icon-small">
+              <a href="/recipe-tools-dev/report-recipe/?name=Real%20Caesar%20Salad" class="btn btn-secondary icon-small">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" aria-label="Warning"><path d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z"></path><line x1="12" y1="9" x2="12" y2="13"></line><line x1="12" y1="17" x2="12.01" y2="17"></line></svg>
                 Report recipe
               </a>
@@ -181,7 +180,7 @@
                 Edit recipe
               </a>
 
-              <a href="#" class="btn btn-secondary icon-small">
+              <a href="/recipe-tools-dev/report-recipe/?name=Sfouggato" class="btn btn-secondary icon-small">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" aria-label="Warning"><path d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z"></path><line x1="12" y1="9" x2="12" y2="13"></line><line x1="12" y1="17" x2="12.01" y2="17"></line></svg>
                 Report recipe
               </a>
