--- a/recipes-featuring/index.html
+++ b/recipes-featuring/index.html
@@ -38,11 +38,17 @@
             </svg>
           </a>
         </p>
-        <nav class="col-10 col-md-11 text-center">
+        <nav class="col-8 col-md-10 text-center pad-vert-base" aria-label="Main">
           <a href="/recipe-tools-dev/pick-three-things/" class="btn btn-primary">Pick three things</a>
           <em title="You are here" class="btn btn-primary btn-selected">Recipes featuring</em>
           <a href="/recipe-tools-dev/themes/" class="btn btn-primary">Recipe themes</a>
         </nav>
+        <p class="col-2 col-md-1 icon-medium flush text-center small">
+          <a href="/recipe-tools-dev/account/" class="nav-text">
+            <img src="/recipe-tools-dev/img/users/thumb-sarah-bishop.jpg" alt="User" class="round">
+            Account
+          </a>
+        </p>
       </div>
     </div>
   </header>
