Dietary config and edit recipe

--- a/account/user-information/index.html
+++ b/account/user-information/index.html
@@ -59,7 +59,7 @@
         <nav class="col-md-4" aria-label="Account">
           <p><a href="/recipe-tools-dev/account/" class="btn btn-primary">My favourite recipes</a></p>
           <p><a href="/recipe-tools-dev/account/add-recipe/" class="btn btn-primary">Add a new recipe</a></p>
-            <p><em class="btn btn-primary btn-selected">Update account info</em></p>
+          <p><em class="btn btn-primary btn-selected">Update account info</em></p>
         </nav>
         <section class="col-md-8" aria-label="User Information">
           <h2>User Information</h2>
@@ -94,6 +94,76 @@
               </button>
             </p>
           </div>
+          <fieldset>
+            <legend class="h3">Food preferences</legend>
+
+            <div class="row gutter-base">
+              <p class="col-sm-4">I am:</p>
+              <p class="col-sm-8">
+                <input type="radio" name="diet-type" id="diet-type-omnivore" value="omnivore" checked>
+                <label for="diet-type-omnivore">Omnivore (I eat everything)</label>
+                <br>
+                <input type="radio" name="diet-type" id="diet-type-vegetarian" value="vegetarian">
+                <label for="diet-type-vegetarian">Vegetarian</label>
+                <br>
+                <input type="radio" name="diet-type" id="diet-type-vegan" value="vegan">
+                <label for="diet-type-vegan">Vegan</label>
+              </p>
+            </div>
+
+            <div class="row gutter-base">
+              <p class="col-sm-4">I observe:</p>
+              <p class="col-sm-8">
+                <input type="checkbox" name="diet-belief" id="diet-belief-halal" value="halal">
+                <label for="diet-belief-halal">Halāl</label>
+                <br>
+                <input type="checkbox" name="diet-belief" id="diet-belief-jainism" value="jainism">
+                <label for="diet-belief-jainism">Jainism (vegetarian, no root vegatables or eggs)</label>
+                <br>
+                <input type="checkbox" name="diet-belief" id="diet-belief-kosher" value="kosher">
+                <label for="diet-belief-kosher">Kosher</label>
+                <br>
+                <input type="checkbox" name="diet-belief" id="diet-belief-l-tal" value="l-tal">
+                <label for="diet-belief-l-tal">L-tal (Rastafarianism)</label>
+              </p>
+            </div>
+
+            <div class="row gutter-base">
+              <p class="col-sm-4">I avoid:</p>
+              <p class="col-sm-8">
+                <input type="checkbox" name="diet-restriction" id="diet-restriction-alcohol" value="alcohol">
+                <label for="diet-restriction-alcohol">Alcohol</label>
+                <br>
+                <input type="checkbox" name="diet-restriction" id="diet-restriction-caffeine" value="caffeine">
+                <label for="diet-restriction-caffeine">Caffeine</label>
+                <br>
+                <input type="checkbox" name="diet-restriction" id="diet-restriction-eggs" value="eggs">
+                <label for="diet-restriction-eggs">Eggs</label>
+                <br>
+                <input type="checkbox" name="diet-restriction" id="diet-restriction-fish" value="fish">
+                <label for="diet-restriction-fish">Fish</label>
+                <br>
+                <input type="checkbox" name="diet-restriction" id="diet-restriction-gluten" value="gluten">
+                <label for="diet-restriction-gluten">Gluten</label>
+                <br>
+                <input type="checkbox" name="diet-restriction" id="diet-restriction-lamb" value="lamb">
+                <label for="diet-restriction-lamb">Lamb</label>
+                <br>
+                <input type="checkbox" name="diet-restriction" id="diet-restriction-lactose" value="lactose">
+                <label for="diet-restriction-lactose">Lactose</label>
+                <br>
+                <input type="checkbox" name="diet-restriction" id="diet-restriction-nuts" value="nuts">
+                <label for="diet-restriction-nuts">Nuts</label>
+                <br>
+                <input type="checkbox" name="diet-restriction" id="diet-restriction-shellfish" value="shellfish">
+                <label for="diet-restriction-shellfish">Shellfish</label>
+                <br>
+                <input type="checkbox" name="diet-restriction" id="diet-restriction-soy" value="soy">
+                <label for="diet-restriction-soy">Soy</label>
+              </p>
+            </div>
+
+          </fieldset>
           <footer class="row">
             <p class="offset-sm-4 col-sm-8"><button class="btn btn-primary">Update my details</button></p>
           </footer>
