--- a/themes/index.html
+++ b/themes/index.html
@@ -44,10 +44,10 @@
           <em title="You are here" class="btn btn-primary btn-selected">Recipe themes</em>
         </nav>
         <p class="col-2 col-md-1 icon-medium flush text-center small">
-          <span class="nav-text">
+          <a href="/recipe-tools-dev/account/" class="nav-text">
             <img src="/recipe-tools-dev/img/users/thumb-sarah-bishop.jpg" alt="User" class="round">
             Account
-          </span>
+          </a>
         </p>
       </div>
     </div>
