--- a/account/edit-recipe/index.html
+++ b/account/edit-recipe/index.html
@@ -58,8 +58,11 @@
       <div class="row">
         <nav class="col-md-4" aria-label="Account">
           <p><a href="/recipe-tools-dev/account/" class="btn btn-primary">My favourite recipes</a></p>
+          <p><a href="/recipe-tools-dev/account/shopping-list/" class="btn btn-primary">My shopping list</a></p>
+          <p><a href="/recipe-tools-dev/account/meal-plan/" class="btn btn-primary">My meal plan</a></p>
           <p><a href="/recipe-tools-dev/account/add-recipe/" class="btn btn-primary">Add a new recipe</a></p>
           <p><a href="/recipe-tools-dev/account/user-information/" class="btn btn-primary">Update account info</a></p>
+          <p><a href="/recipe-tools-dev/" class="btn btn-primary">Log out</a></p>
         </nav>
         <section class="col-md-8" aria-label="Add a new recipe">
           <h2>Edit recipe</h2>
@@ -152,6 +155,41 @@
      </div>
     </div>
   </main>
+
+  <footer class="bt-yellow pad-vert-tiny brd-top brd-yellow">
+    <div class="container">
+      <div class="d-block d-md-flex">
+        <p class="media-body flush">
+          <a href="/recipe-tools-dev/" class="nav-text">Logout</a>
+          <a href="/recipe-tools-dev/" class="nav-text">About us</a>
+          <a href="/recipe-tools-dev/account/shopping-list/" class="nav-text">Shopping list</a>
+        </p>
+        <p class="flush">
+          <a href="https://www.instagram.com/" target="_blank" class="nav-text icon-small">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-label="Instagram"><rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path><line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line></svg>
+            Instagram
+          </a>
+
+          <a href="https://www.pinterest.co.uk/" target="_blank" class="nav-text icon-small">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24" width="24" height="24" aria-label="Pinterest"><path d="M12 .6a11.4 11.4 0 00-4.2 22 11 11 0 010-3.2l1.4-5.7S9 13 9 12c0-1.6.9-2.8 2-2.8 1 0 1.5.7 1.5 1.6 0 1-.6 2.5-1 3.8-.2 1.2.6 2 1.7 2 2 0 3.6-2 3.6-5.1 0-2.8-2-4.7-4.7-4.7a5 5 0 00-5.2 5c0 1 .4 2 .8 2.6l.1.3-.3 1.3c0 .2-.2.3-.4.2-1.4-.7-2.3-2.8-2.3-4.5 0-3.6 2.6-6.9 7.6-6.9 4 0 7 2.8 7 6.6 0 4-2.5 7.1-6 7.1-1 0-2.2-.6-2.6-1.3L10 20c-.2 1-1 2.3-1.4 3A11.4 11.4 0 1012 .6"/></svg>
+            Pinterest
+          </a>
+
+          <a href="https://twitter.com/" target="_blank" class="nav-text icon-small">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" fill="currentColor" stroke="none" aria-label="Twitter"><path d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z"></path></svg>
+            Twitter
+          </a>
+
+          <a href="https://en-gb.facebook.com/" target="_blank" class="nav-text icon-small">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" fill="currentColor" stroke="none" aria-label="Facebook"><path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"></path></svg>
+            Facebook
+          </a>
+
+        </p>
+      </div>
+    </div>
+  </footer>
+
 <script type="text/javascript" src="../../js/app.js"></script></body>
 
 </html>
