Keto barometer tweaks

--- a/account/index.html
+++ b/account/index.html
@@ -101,7 +101,7 @@
                 Edit recipe
               </a>
 
-              <a href="/recipe-tools-dev/report-recipe/?name=Gambas%20al%20Ajillo" class="btn btn-secondary icon-small">
+              <a href="/recipe-tools-dev/report-recipe/?recipe-name=Gambas%20al%20Ajillo" class="btn btn-secondary icon-small">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" aria-label="Warning"><path d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z"></path><line x1="12" y1="9" x2="12" y2="13"></line><line x1="12" y1="17" x2="12.01" y2="17"></line></svg>
                 Report recipe
               </a>
@@ -142,7 +142,7 @@
                 Edit recipe
               </a>
 
-              <a href="/recipe-tools-dev/report-recipe/?name=Real%20Caesar%20Salad" class="btn btn-secondary icon-small">
+              <a href="/recipe-tools-dev/report-recipe/?recipe-name=Real%20Caesar%20Salad" class="btn btn-secondary icon-small">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" aria-label="Warning"><path d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z"></path><line x1="12" y1="9" x2="12" y2="13"></line><line x1="12" y1="17" x2="12.01" y2="17"></line></svg>
                 Report recipe
               </a>
@@ -183,7 +183,7 @@
                 Edit recipe
               </a>
 
-              <a href="/recipe-tools-dev/report-recipe/?name=Sfouggato" class="btn btn-secondary icon-small">
+              <a href="/recipe-tools-dev/report-recipe/?recipe-name=Sfouggato" class="btn btn-secondary icon-small">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" aria-label="Warning"><path d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z"></path><line x1="12" y1="9" x2="12" y2="13"></line><line x1="12" y1="17" x2="12.01" y2="17"></line></svg>
                 Report recipe
               </a>
